components/basicapp-java-quarkus-sample/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: basicapp
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: basicapp-java-quarkus-sample
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elbasicapp-java-quarkus-sample
  namespace: bentaljaard
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-basicapp-java-quarkus-sample
    weight: null
status: {}
